--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts\" \"npm run serve-debug\"",
     "build": "tsc",
-    "start": "npm run build && node dist/index.js",
-    "watch-ts": "tsc -w",
-    "serve-debug": "nodemon --inspect dist/index.js"
+    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts\" \"npm run serve-debug\"",
+    "start": "node dist/index.js",
+    "serve-dev": "nodemon dist/index.js",
+    "serve-debug": "nodemon --inspect dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch-ts": "tsc -w"
   },
   "keywords": [],
   "author": "",
