--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "node.ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts\" \"npm run serve-dev\"",
+    "lint": "eslint . --ext .ts --fix",
     "start": "node dist/index.js",
     "serve-dev": "nodemon dist/index.js",
     "serve-debug": "nodemon --inspect dist/index.js",
@@ -17,13 +18,18 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "pino": "^6.12.0",
     "pino-pretty": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^16.3.1",
     "@types/pino": "^6.3.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "concurrently": "^6.2.0",
+    "eslint": "^7.31.0",
     "nodemon": "^2.0.12",
     "typescript": "^4.3.5"
   }
