--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "dom",
       "es6",
       "es2017",
-      "esnext.asynciterable"
+      "ES2021",
+      "ESNext"
     ],
     "sourceMap": true,
     "outDir": "./dist",
